# openpi_subtask_generation

./: .gitignore  pyproject.toml
examples/: README_lerobot.md  simple_lerobot_example.py  use_lerobot_dataset.py
scripts/: compute_norm_stats_x2robot.py  run_train_pi05_highlow.sh  serve_policy.py  test_paligemma_tokenizer.py  test_profile.py  train.py  train_x2robot.py  train_x2robot_aliyun.py  train_x2robot_aliyun_v2.py  x2robot_delta_EE_cloth_replay.py  x2robot_delta_EE_cloth_replay_rtc.py  x2robot_delta_joint_cloth_replay.py  x2robot_delta_joint_cloth_replay_rtc.py  x2robot_demo_cur_relative_cloth.py  x2robot_demo_cur_relative_cloth_rtc.py  x2robot_demo_move.py  x2robot_demo_move2.py  x2robot_infer.py
src/openpi/: transforms.py
src/openpi/models/: gemma_05.py  model.py  pi0.py  pi05_config.py  pi0_fast.py  tokenizer.py  tokenizer_test.py
src/openpi/policies/: arx_policy.py  policy.py  policy_config.py
src/openpi/shared/: download_test.py
src/openpi/training/: checkpoints.py  config.py  data_loader.py  weight_loaders.py
test/: pi05_subtask.ipynb  pi05_train.ipynb  test.py  test_image.py  visualize_test_image.py
test_scripts/: manual_download.py  test_data.sh  test_device.py  test_distributed.sh  test_jax.py  test_run.sh
test_scripts/slurm_scripts/: test_run.sh
tmp_test/: inspect_paligemma_tokens.py  test_pi05_subtask_generation.py
train/: train_pi05_highlow.py
